# Post-service

./: .dockerignore  .gitignore  LICENSE  README.md  local.yml  manage.py  pyproject.toml  setup.cfg
.envs/.local/: .postgres
compose/local/: docker-entrypoint.sh
compose/local/django/: Dockerfile
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
post_service/: conftest.py
post_service/analytics/: apps.py  services.py  urls.py
post_service/analytics/api/: serializers.py  views.py
post_service/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
post_service/posts/: apps.py  models.py  selectors.py  services.py  urls.py
post_service/posts/api/: serializers.py  views.py
post_service/posts/migrations/: 0001_initial.py  0002_alter_postlike_unique_together_and_more.py
post_service/templates/: base.html
post_service/users/: apps.py  models.py  services.py  urls.py
post_service/users/api/: serializers.py  views.py
post_service/users/migrations/: 0001_initial.py  0002_user_last_request.py
post_service/utils/: api_utils.py  base_models.py  middlewares.py
tests/: bot.py
tests/posts/: factories.py
